Alpha 0.015
-----------
* Namespaces
* Export
* Fixed ASI bug with return statements and debug lines

8/15/12 - Alpha 0.014.1
-----------
* CLI Compiler pretty prints errors, highlights relevant line number and character
* CLI Compiler updates and fixes
* JavaScript++ command-line REPL
* Bug fixes for switch statements
* Pretty printing of compiled code
* Nested class declarations now work with access modifiers

8/7/12 - Alpha 0.014
-----------
* Updated unit tests
* Improved test coverage for static typing and class access modifiers
* Fixed bugs with "this" keyword when used inside classes
* Fixed global wrapper function
* Automatically "break" each case in a switch statement
* Switch statements now support comma-separated cases
* Unit test refactoring
* Fixed duplicate class declarations bug

1/29/12 - Alpha 0.013
--------
* CLI Compiler (Credit: Jussi Kalliokoski)
* Fixed "this" keyword to refer to current instance of a class
* Fixed class method declarations - behaves like JS function declarations now
* Fixed access modifiers for nested classes
* Fixed private static/protected static
* Fixed class instantation bug in IE8 when using Object.defineProperty
* "protected" keyword and related tests are now working
* "super" keyword and related tests are now working
* Bug fixes

10/25/11 - Alpha 0.012
--------
* Fully typed ES3
* #typesys strict will look up properties
* #typesys strict will look up the prototype chain
* #typesys strict is compatible with typed ES3
* Property assignments are saved by compiler
* Started parsing nullable types, "is" keyword
* Bug fixes to #typesys strict and classes

10/10/11 - Alpha 0.011
--------
* Fixed parsing of rest parameters as first parameter
* Redeclaration of function parameters with let now works properly
* Static class members are now looked up properly
* Fixed bug where class members were being looked up outside of class

10/7/11
-------
* Added compiler.html - web page to invoke compiler