@@ -16,6 +16,7 @@
 <script type="text/javascript" src="../src/jsdefs.js"></script>
 <script type="text/javascript" src="../src/jsparse.js"></script>
 <script type="text/javascript" src="../src/compiler.js"></script>
+<script type="text/javascript" src="../src/dist-common.js"></script>
 
 <script type="text/javascript" src="lib/jquery-1.7.1.js"></script>
 <script type="text/javascript" src="lib/qunit.js"></script>
